[ADD] estate_nursery : mereview age seed , untuk setiap cleaving dan recovery

--- a/estate_nursery/views/estate_nursery_selection_view.xml
+++ b/estate_nursery/views/estate_nursery_selection_view.xml
@@ -266,7 +266,8 @@
                                 <field name="selection_date"
                                        attrs="{'invisible': [('selectionstage_id','=',False)],
                                  'readonly': [('state','=','done')]}"/>
-                                 <field name="age_seed" readonly="1"/>
+                                <field name="age_seed" readonly="1"/>
+                                <field name="age_seed_calculate" readonly="1"/>
 
                             </group>
 
