--- a/estate_nursery/views/estate_nursery_recovery.xml
+++ b/estate_nursery/views/estate_nursery_recovery.xml
@@ -87,8 +87,8 @@
 
                         <group>
                             <group>
-                                <field name="batch_id" invisible="0"/>
-                                <field name="step_id"/>
+                                <field name="batch_id" invisible="1"/>
+                                <field name="step_id" attrs="{'readonly': [('state','=','done')]}"/>
                                 <field name="date_planted"/>
                                 <field name="recovery_date" string="Recovery Date" required="1" attrs="{'readonly': [('state','=','done')]}"/>
                             </group>
@@ -98,6 +98,7 @@
                                         attrs="{'readonly': [('state','=','done')]}" options="{'no_create_edit': True}"/>
                                 <field name="qty_total" string="Quantity Total" attrs="{'required': [('state','=','draft')],
                                  'readonly': [('state','!=','draft')]}"/>
+                                <field name="age_seed" readonly="1"/>
                             </group>
 
                         </group>
