--- a/estate_nursery/views/estate_nursery_view.xml
+++ b/estate_nursery/views/estate_nursery_view.xml
@@ -276,16 +276,13 @@
                                     <group name="top" string="Information">
                                         <group name="top_left">
                                             <field name="age_seed_range" string="Seed Age" readonly="1"/>
-                                            <field name="age_seed_planted" string="Seed Age Planted" readonly="1" invisible="0"/>
+                                            <field name="age_seed_planted" string="Seed Age Planted" readonly="1" invisible="1"/>
                                             <field name="qty_planted_temp" invisible="1" readonly="1">{‘readonly_by_pass’: True}</field>
-                                             <field name="age_seed" attrs="{'required': [('state','=','draft')],
-                                            'readonly': [('state','=','done')]}"/>
+                                            <field name="age_seed" attrs="{'readonly': [('state','=','done')]}"/>
                                         </group>
                                         <group name="top_right">
-                                            <field name="product_id" attrs="{'required': [('state','=','draft')],
-                                            'readonly': [('state','=','done')]}" options="{'no_create_edit': True}"/>
-                                            <field name="variety_id" attrs="{'required': [('state','=','draft')],
-                                            'readonly': [('state','=','done')]}" options="{'no_create_edit': True}"/>
+                                            <field name="product_id" attrs="{'readonly': [('state','=','done')]}" options="{'no_create_edit': True}"/>
+                                            <field name="variety_id" attrs="{'readonly': [('state','=','done')]}" options="{'no_create_edit': True}"/>
                                             <field name="selection_count" invisible="1"/>
                                         </group>
                                     </group>
@@ -716,17 +713,21 @@
                   sequence="12"
                   groups="estate.group_user"/>
 
-        <menuitem id="nursery_seed_batch" name="Seed Batch"
+        <menuitem id="nursery_seed_list_batch" name="Seed Batch"
                   parent="estate_nursery_menu"
-                  action="action_list_batch"
                   sequence="13"/>
 
+        <menuitem id="nursery_seed_batch" name="Seed List Batch"
+                  parent="nursery_seed_list_batch"
+                  action="action_list_batch"
+                  sequence="11"/>
+
         <menuitem id="traceability_batch" name="Traceability Batch"
-                  parent="nursery_seed_batch"
+                  parent="nursery_seed_list_batch"
                   sequence="13"/>
 
         <menuitem id="detail_batch" name="Detail Batch"
-                  parent="nursery_seed_batch"
+                  parent="nursery_seed_list_batch"
                   sequence="12"/>
 
         <menuitem id="nursery_quants_batch" name="Seed Batch Quants"
