--- a/estate_nursery/reports/requestplanting_report.xml
+++ b/estate_nursery/reports/requestplanting_report.xml
@@ -49,19 +49,19 @@
                     <table class="table table-condensed">
                         <thead>
                             <tr>
-                                <th style="width:40%;">Blok</th>
-                                <th style="width:10%;">Luas(Ha)</th>
-                                <th style="width:20%;">Pokok</th>
-                                <th style="width:30%;">Keterangan</th>
+                                <th style="width:40%; font-size:9pt;border: 1px solid black !important; height:40px;" >Blok</th>
+                                <th style="width:10%; font-size:9pt;border: 1px solid black !important; height:40px;">Luas(Ha)</th>
+                                <th style="width:20%; font-size:9pt;border: 1px solid black !important; height:40px;">Pokok</th>
+                                <th style="width:30%; font-size:9pt;border: 1px solid black !important; height:40px;">Keterangan</th>
                             </tr>
                         </thead>
 
                         <tbody class="request_tbody">
                             <tr t-foreach="o.requestline_ids" t-as="l">
-                                <td style="width:40%;"><span t-field="l.inherit_location_id"/></td>
-                                <td style="width:10%;"><span t-field="l.large_area"/></td>
-                                <td style="width:20%;"><span t-field="l.qty_request"/></td>
-                                <td style="width:30%;"><span t-field="l.comment"/></td>
+                                <td style="width:40%; font-size:9pt;border: 1px solid black !important; height:40px;"><span t-field="l.inherit_location_id"/></td>
+                                <td style="width:10%;font-size:9pt;border: 1px solid black !important; height:40px;"><span t-field="l.large_area"/></td>
+                                <td style="width:20%;font-size:9pt;border: 1px solid black !important; height:40px;"><span t-field="l.qty_request"/></td>
+                                <td style="width:30%;font-size:9pt;border: 1px solid black !important; height:40px;"><span t-field="l.comment"/></td>
                             </tr>
                         </tbody>
                     </table>
