--- a/estate_nursery/views/estate_nursery_selection_view.xml
+++ b/estate_nursery/views/estate_nursery_selection_view.xml
@@ -267,7 +267,7 @@
                                        attrs="{'invisible': [('selectionstage_id','=',False)],
                                  'readonly': [('state','=','done')]}"/>
                                 <field name="age_seed" readonly="1"/>
-                                <field name="age_seed_calculate" readonly="1"/>
+                                <field name="age_seed_calculate" readonly="1" invisible="1"/>
 
                             </group>
 
