--- a/estate_nursery/views/estate_nursery_cleaving_seed_view.xml
+++ b/estate_nursery/views/estate_nursery_cleaving_seed_view.xml
@@ -103,7 +103,7 @@
 
                         <group>
                             <group>
-                                <field name="id" invisible="1"/>
+                                <field name="batch_id" invisible="1"/>
                                 <field name="date_planted"/>
                                 <field name="cleaving_date" string="Cleaving Date" attrs="{'readonly': [('state','=','done')]}"/>
                                 <field name="qty_plante" string="Quantity Last planted" invisible="1"/>
@@ -125,7 +125,8 @@
                                     <page string="Cleaving Line">
                                         <tree>
                                             <field name="cleavingline_ids" attrs="{'readonly': [('state','=','done')]}"
-                                                    context="{'tree_view_ref' : 'estate_nursery.view_tree_cleavingline_polytone'}"/>
+                                                    context="{'tree_view_ref' : 'estate_nursery.view_tree_cleavingline_polytone',
+                                                    'default_batch_id':batch_id}"/>
                                         </tree>
                                      </page>
                             </notebook>
@@ -147,6 +148,7 @@
                     <field name="qty_single" string="&#931; Batch single" readonly="1">{‘readonly_by_pass’: True}</field>
                     <field name="qty_double" string="&#931; Batch Double" readonly="1">{‘readonly_by_pass’: True}</field>
                     <field name="qty_normal_double" string="Nor Cleaving" />
+                    <field name="batch_id" invisible="1"/>
                     <field name="location_type" string="Location virtual" readonly="1"/>
                     <field name="location_id" string="Location To" options="{'no_create_edit': True}"/>
                     <field name="comment" string="Description or Comment"/>
