--- a/estate_nursery/views/estate_nursery_selection_view.xml
+++ b/estate_nursery/views/estate_nursery_selection_view.xml
@@ -251,7 +251,7 @@
                                  <field name="selection_code" class="oe_inline" readonly="1" />
                                  <label string="For "
                                        attrs="{'invisible': [('state','in',('draft','sent','bid'))]}"/>
-                                 <field name="batch_code" class="oe_inline" readonly="1" />
+                                 <field name="batch_id" class="oe_inline" readonly="1" />
                              </h1>
                          </div>
 
@@ -307,7 +307,8 @@
                                         <tree>
                                             <field name="selectionline_ids" track_visibility="onchange" attrs="{'required': [('state','=','draft')],
                                                 'readonly': [('state','=','done')]}"
-                                                   context="{'tree_view_ref' : 'estate_nursery.view_tree_selectionline'}"/>
+                                                   context="{'tree_view_ref' : 'estate_nursery.view_tree_selectionline',
+                                                   'default_batch_id':batch_id}"/>
                                         </tree>
                                     </page>
 
@@ -390,6 +391,7 @@
             <field name="arch" type="xml">
                 <tree string="Seed Selection Line" colors="black:qty" editable="bottom">
                     <field name="cause_id" options="{'no_create_edit': True}" />
+                    <field name="batch_id" invisible="1"/>
                     <field name="stage_a_id" invisible="1"/>
                     <field name="qty" string="&#931; Quantity Abnormal ." sum="Qty"/>
                     <field name="location_id" options="{'no_create_edit': True}"/>
