[ADD] estate_nursery : add location di transferMn sesuai dengan lokasi yang ada di batchline dan akan hilang jika qtynya habis

--- a/estate_nursery/reports/reportplantation_culling.xml
+++ b/estate_nursery/reports/reportplantation_culling.xml
@@ -6,7 +6,7 @@
             <t t-call="report.external_layout">
                 <div class="page">
                     <!--First Row-->
-                        <div class="row col-xs-12" style="font-family: times; background-color:#568eff;border: 1px solid #568eff;color:#ffffff; font-size:20pt;">
+                        <div class="row col-xs-12" style="font-family: times; background-color:white;border: 1px solid white;color:black; font-size:20pt;">
                             <div class="col-xs-12" >
                                 <p style="text-align:center;font-family: times;">Report Berita Acara Pemusnahan Bibit</p>
                             </div>
