--- a/estate_nursery/views/estate_nursery_transfermn.xml
+++ b/estate_nursery/views/estate_nursery_transfermn.xml
@@ -21,8 +21,8 @@
             <field name="arch" type="xml">
                 <tree string="Nursery transfer Pn to Pn View" delete="false">
                     <field name="transfermn_code" string="Transfer Code"/>
-                    <field name="date_transfer" string="Date of Transfer"/>
                     <field name="batch_id" string="Batch"/>
+                    <field name="date_transfer" string="Date of Transfer"/>
                     <field name="qty_move" string="Quantity Transfer Mn"/>
                     <field name="location_mn_id" />
                 </tree>
@@ -96,7 +96,8 @@
                                         <tree>
                                             <field name="transfermnline_ids" track_visibility="onchange" attrs="{'required': [('state','=','draft')],
                                                 'readonly': [('state','=','done')]}"
-                                                   context="{'tree_view_ref' : 'estate_nursery.view_tree_transfermnline_seed'}"/>
+                                                   context="{'tree_view_ref' : 'estate_nursery.view_tree_transfermnline_seed',
+                                                   'default_batch_id': batch_id}"/>
                                         </tree>
                                 </page>
                             </notebook>
@@ -117,6 +118,7 @@
                 <tree string="Nursery Transfer to Mn Tree View" editable="bottom">
                     <field name="transfermn_id" invisible="1" />
                     <field name="qty_move" string="Qty Normal" required="1"/>
+                    <field name="batch_id" invisible="1"/>
                     <field name="location_pn_id" string="Location From" required="1" options="{'no_create_edit': True}"/>
                 </tree>
             </field>
