--- a/estate_nursery/views/estate_nursery_view.xml
+++ b/estate_nursery/views/estate_nursery_view.xml
@@ -258,7 +258,6 @@
                                 <field name="name"/>
                                 <field name="date_received" />
                                 <field name="date_planted" attrs="{'required': [('state','=','draft')], 'readonly': [('state','=','done')]}"/>
-                                <field name="state" invisible="True"/>
                                 <field name="stage_id" invisible="True" readonly="True"/>
                                 <field name="status" invisible="1" context="{'default_status' : False}"/>
                                 <field name="status_age" invisible="1" context="{'default_status' : False}"/>
@@ -278,11 +277,11 @@
                                             <field name="age_seed_range" string="Seed Age" readonly="1"/>
                                             <field name="age_seed_planted" string="Seed Age Planted" readonly="1" invisible="1"/>
                                             <field name="qty_planted_temp" invisible="1" readonly="1">{‘readonly_by_pass’: True}</field>
-                                            <field name="age_seed" attrs="{'readonly': [('state','=','done')]}"/>
+                                            <field name="age_seed" readonly="1">{‘readonly_by_pass’: True}</field>
                                         </group>
                                         <group name="top_right">
-                                            <field name="product_id" attrs="{'readonly': [('state','=','done')]}" options="{'no_create_edit': True}"/>
-                                            <field name="variety_id" attrs="{'readonly': [('state','=','done')]}" options="{'no_create_edit': True}"/>
+                                            <field name="product_id" readonly="1" options="{'no_create_edit': True}">{‘readonly_by_pass’: True}</field>
+                                            <field name="variety_id" readonly="1" options="{'no_create_edit': True}">{‘readonly_by_pass’: True}</field>
                                             <field name="selection_count" invisible="1"/>
                                         </group>
                                     </group>
@@ -314,15 +313,24 @@
                                     <field name="selection_ids"  string="Create Selection" attrs="{
                                     'required' : [('state', '=', 'draft')]}"
                                            context="{'tree_view_ref' : 'estate_nursery.view_tree_selection_nursery',
+                                           'default_batch_id':id,
                                            'default_qty_plante': qty_planted,'default_date_plant': date_planted,
                                            'default_age_seed': age_seed_range}"/>
                                 </page>
 
-                                <page> string="Cleaving Polytone" attrs="{'invisible' : [('qty_double', '=',0)],}">
+                                <page string="Transfer Mn" attrs="{'invisible' : [('age_seed_range','&lt;',3)]}">
+                                    <field name="transfermn_ids"  string="Create Selection" attrs="{
+                                    'required' : [('state', '=', 'draft')]}"
+                                           context="{'tree_view_ref' : 'estate_nursery.view_tree_transfermn',
+                                           'default_batch_id':id}"/>
+                                </page>
+
+                                <page string="Cleaving Polytone" attrs="{'invisible' : [('qty_double', '=',0)],}">
                                     <field name="cleaving_ids" string="Create Cleaving Polytone" attrs="{
                                     'readonly' : ['|',('status','=',True),
-                                    ('age_seed_range','!=',3),('status_age','!=',True)]}"
+                                    ('age_seed_range','&lt;',3),('status_age','!=',True)]}"
                                            context="{'tree_view_ref' : 'estate_nursery.view_tree_cleaving_polytone',
+                                           'default_batch_id':id,
                                            'default_qty_plante': qty_planted,'default_date_planted' : date_planted,
                                            'default_age_seed' : age_seed_range}"/>
                                 </page>
@@ -330,6 +338,7 @@
                                 <page string="Recovery Seed" attrs="{'invisible' : [('qty_recovery','=',0)]}">
                                     <field name="recovery_ids" string="Create Recovery Seed"
                                            context="{'tree_view_ref' : 'estate_nursery.view_tree_recovery_seed',
+                                           'default_batch_id':id,
                                            'default_qty_plante': qty_planted,'default_date_planted' : date_planted,
                                            'default_age_seed' : age_seed_range,'default_qty_recovery': qty_recovery}"/>
                                 </page>
@@ -345,12 +354,12 @@
                                 <field name="message_ids" widget="mail_thread" options='{"thread_level": 1}'/>
                         </div>
                     </sheet>
-                       <footer>
-                            <button name="show_history" string="_Show" class="oe_highlight"/>
-                        </footer>
-                        <script>
-                            jQuery('footer button:first').click(function() { alert('hello pagi oza'); });
-                        </script>
+                       <!--<footer>-->
+                            <!--<button name="show_history" string="_Show" class="oe_highlight"/>-->
+                        <!--</footer>-->
+                        <!--<script>-->
+                            <!--jQuery('footer button:first').click(function() { alert('hello pagi oza'); });-->
+                        <!--</script>-->
                 </form>
             </field>
         </record>
@@ -379,7 +388,8 @@
                     <field name="percentage_abnormal" string="% Abn."
                            groups="estate.group_assistant"/>
                     <field name="qty_planted" string="&#931; Plt." sum="Qty Planted" readonly="1">{‘readonly_by_pass’: True}</field>
-                    <field name="location_id" string="Loc." options="{'no_create_edit': True}" attrs="{'readonly' : [('flag_bag','=',False)]}"/>
+                    <field name="location_id" string="Loc." options="{'no_create_edit': True}"
+                           attrs="{'readonly' : [('flag_bag','=',False)]}"/>
                     <field name="selection_do_var" string="Var DO"
                            groups="estate.group_assistant"/>
                     <field name="planting_selection_var" string="Var Plt."
@@ -675,25 +685,9 @@
                  <button name="signal_approved" position="after">
                      <button name="%(reportplantation_seedreceived_batch)d"
                                 string="Print Seed Receive" states="done" type="action" icon="gtk-print"/>
-                     <button name="%(action_list_transfermn)d"
-                                string="Request Mn"
-                                attrs="{'invisible':[('state','!=','done'),('age_seed_range','&lt;',3),('selection_count','&lt;',3)]}"
-                                type="action" />
                  </button>
              </field>
          </record>
-
-        <!--&lt;!&ndash;inherit action move &ndash;&gt;-->
-        <!--<record model="ir.actions.act_window" id="view_form_inherit_stockmove_template">-->
-             <!--<field name="name">Inherit Stock Move Template</field>-->
-             <!--<field name="res_model">stock.production.lot</field>-->
-             <!--<field name="inherit_id" ref="stock.action_production_lot_form"/>-->
-             <!--<field name="arch" type="xml">-->
-                 <!--<field name="context" position="replace">-->
-                     <!--<field name="context">{'search_default_product_name':1}</field>-->
-                 <!--</field>-->
-             <!--</field>-->
-         <!--</record>-->
 
         <!-- Menu -->
         <menuitem id="estate_nursery_menu"
