--- a/estate_nursery/views/estate_nursery_recovery.xml
+++ b/estate_nursery/views/estate_nursery_recovery.xml
@@ -21,7 +21,7 @@
             <field name="arch" type="xml">
                 <tree string="Nursery Recovery Tree View" delete="false">
                     <field name="recovery_code" string="Recovery ID"/>
-                    <field name="step_id"/>
+                    <field name="stage_id"/>
                     <field name="recovery_date"/>
                     <field name="qty_recovery" string="QTY Selection Abnormal"/>
                     <field name="qty_normal" string="QTY Recovery Normal"/>
@@ -88,7 +88,8 @@
                         <group>
                             <group>
                                 <field name="batch_id" invisible="1"/>
-                                <field name="step_id" attrs="{'readonly': [('state','=','done')]}"/>
+                                <field name="stage_id" attrs="{'readonly': [('state','=','done')]}" options="{'no_create_edit': True}"/>
+                                <field name="step_id" attrs="{'readonly': [('state','=','done')]}" options="{'no_create_edit': True}"/>
                                 <field name="date_planted"/>
                                 <field name="recovery_date" string="Recovery Date" required="1" attrs="{'readonly': [('state','=','done')]}"/>
                             </group>
