[add] estate_nursery : membuat stock move dari plot ke block di modul spb, membuat contraint untuk max qty dan membuat domain untuk batch di modul BPB

--- a/estate_nursery/views/estate_nursery_cleaving_seed_view.xml
+++ b/estate_nursery/views/estate_nursery_cleaving_seed_view.xml
@@ -7,8 +7,8 @@
             <field name="arch" type="xml">
                    <graph string="Graph Cleaving Abnormal Seed" type="pivot">
                        <field name="batch_id" string="Cleaving"/>
-                       <field name="qty_total" type="measure" string="Qty Normal"/>
-                       <field name="qty_abnormal" type="measure"  sum="Qty Abnormal"/>
+                       <!--<field name="qty_total" type="measure" string="Qty Normal"/>-->
+                       <!--<field name="qty_abnormal" type="measure"  sum="Qty Abnormal"/>-->
                    </graph>
             </field>
         </record>
