--- a/estate_nursery/reports/requestplanting_report.xml
+++ b/estate_nursery/reports/requestplanting_report.xml
@@ -58,7 +58,7 @@
 
                         <tbody class="request_tbody">
                             <tr t-foreach="o.requestline_ids" t-as="l">
-                                <td style="width:40%; font-size:9pt;border: 1px solid black !important; height:40px;"><span t-field="l.inherit_location_id"/></td>
+                                <td style="width:40%; font-size:9pt;border: 1px solid black !important; height:40px;"><span t-field="l.block_location_id"/></td>
                                 <td style="width:10%;font-size:9pt;border: 1px solid black !important; height:40px;"><span t-field="l.large_area"/></td>
                                 <td style="width:20%;font-size:9pt;border: 1px solid black !important; height:40px;"><span t-field="l.qty_request"/></td>
                                 <td style="width:30%;font-size:9pt;border: 1px solid black !important; height:40px;"><span t-field="l.comment"/></td>
