--- a/estate_nursery/views/estate_planting_view.xml
+++ b/estate_nursery/views/estate_planting_view.xml
@@ -77,12 +77,13 @@
                         </group>
                         <group>
                             <notebook>
-                                <page string="BPB Information">
-                                        <field name="batch_planted_ids" string="Information For BPB"
+                                <page string="BPB List Information">
+                                        <field name="request_ids" string="Information For BPB"
                                                attrs="{
                                         'required' : [('state', '=', 'confirmed')],
                                         'readonly' : [('state', '=', 'done')]}"
-                                                context="{'tree_view_ref' : 'estate_nursery.view_batch_parameter_tree'}"/>
+                                                context="{'tree_view_ref' : 'estate_nursery.view_tree_request_planting',
+                                                'default_seeddo_id': id}"/>
                                 </page>
 
                                 <page string="Seed DO Detail Transportir">
@@ -271,6 +272,7 @@
 
                         <group>
                             <group>
+                                <field name="seeddo_id" invisible="1"/>
                                 <field name="kebun_location_id" attrs="{'required': [('state','!=','draft')],
                                  'readonly': [('state','=','done')]}" options="{'no_create_edit': True}"/>
                                 <field name="divisi_location_id" attrs="{'required': [('state','!=','draft')],
@@ -314,9 +316,11 @@
             <field name="model">estate.nursery.requestline</field>
             <field name="arch" type="xml">
                 <tree string="Request line View" colors="red:qty_request" editable="bottom">
-                    <field name="inherit_location_id" string="Blok" options="{'no_create_edit': True}" />
+                    <field name="block_location_id" string="Blok" options="{'no_create_edit': True}" />
                     <field name="large_area" string="Large(Ha)"/>
                     <field name="qty_request" string="&#931; Quantity Request ." sum="Qty"/>
+                    <field name="batch_id" string="Batch no" options="{'no_create_edit': True}"/>
+                    <field name="location_id" string="Plot" options="{'no_create_edit': True}"/>
                     <field name="comment"/>
                 </tree>
             </field>
@@ -356,9 +360,6 @@
              <field name="inherit_id" ref="estate_nursery.view_form_request_planting"/>
              <field name="arch" type="xml">
                  <button name="signal_done" position="after">
-                     <button name="%(action_list_seeddo)d"
-                                type='action' string='Create SPB'
-                                states='validate2' groups="estate.group_manager"/>
                      <button name="%(custom_report_request)d"
                                 type='action' string='Print BPB' icon="gtk-print"
                                 states='done' groups="estate.group_manager"/>
