--- a/estate_nursery/views/estate_planting_view.xml
+++ b/estate_nursery/views/estate_planting_view.xml
@@ -72,12 +72,12 @@
                                 <field name="date_request"/>
                             </group>
                             <group coolspan="10">
-                                <field name="total_qty_pokok" string="Total Quantity Seed"/>
+                                <field name="total_qty_pokok" string="Total Quantity Seed Transfer"/>
                             </group>
                         </group>
                         <group>
                             <notebook>
-                                <page string="BPB List Information">
+                                <page string="BPB List">
                                         <field name="request_ids" string="Information For BPB"
                                                attrs="{
                                         'required' : [('state', '=', 'confirmed')],
@@ -86,7 +86,14 @@
                                                 'default_seeddo_id': id}"/>
                                 </page>
 
-                                <page string="Seed DO Detail Transportir">
+                                <page string="Return Seed" attrs="{'invisible':[('state','!=','done')]}">
+                                        <field name="return_ids" string="Information For Return Seed"
+                                                context="{'tree_view_ref' : 'estate_nursery.view_tree_returnseed',
+                                                'default_seeddo_id': id}"/>
+                                </page>
+
+
+                                <page string="Detail Transportir">
                                         <field name="dotransportir_ids"
                                                attrs="{
                                         'required' : [('state', '=', 'confirmed')],
@@ -94,7 +101,7 @@
                                                 context="{'tree_view_ref' : 'estate_nursery.view_tree_dotransportir'}"/>
                                 </page>
 
-                                <page string="Tranportir Activity Information">
+                                <page string="Tranportir Activity">
                                         <field name="activityline_ids" attrs="{
                                         'required' : [('state', '=', 'confirmed')],
                                         'readonly' : [('state', '=', 'done')]}"
@@ -172,6 +179,133 @@
                     <field name="price" string="Price/product" required="1">{‘readonly_by_pass’: True}</field>
                     <field name="transportactivity_expense_id"/>
                     <field name="result_price" string="Total Price" readonly="1"/>
+                </tree>
+            </field>
+        </record>
+
+        <!--View,search returnseed-->
+        <record id="view_search_returnseed" model ="ir.ui.view">
+            <field name="name">Return Seed Search</field>
+            <field name="model">estate.nursery.returnseed</field>
+            <field name="arch" type="xml">
+                  <search>
+                       <filter name="group_returnseed_id" string="Return Date"
+                              icon="terp-partner" context="{'group_by':'return_date'}"/>
+                        <group string="Group By">
+                            <filter name="by_category" string="Date"
+                                context="{'group_by': 'return_date'}"/>
+                        </group>
+                  </search>
+            </field>
+        </record>
+
+        <!--View, Return Seed Planting-->
+        <record model="ir.ui.view" id="view_tree_returnseed">
+            <field name="name">Tree Return Seed</field>
+            <field name="model">estate.nursery.returnseed</field>
+            <field name="arch" type="xml">
+                <tree string="Nursery Stage View">
+                    <field name="bpb_id" string="BPB No"/>
+                    <field name="return_date" string="Return Date"/>
+                    <field name="total_qty_return" string="&#931; Quantity Return ." sum="Qty"/>
+                </tree>
+            </field>
+        </record>
+
+        <record model="ir.ui.view" id="view_form_return_seed">
+            <field name="name">Return Seed Bpb</field>
+            <field name="model">estate.nursery.returnseed</field>
+            <field name="search_view_id" ref="view_search_returnseed"/>
+            <field name="arch" type="xml">
+                <form String="Nursery selection view">
+                    <header coolspan="10">
+
+                        <button name="signal_draft" type="workflow"
+                                string="Reject"
+                                class="oe_highlight"
+                                states="confirmed"
+                                groups="estate.group_assistant"/>
+
+                        <button name="signal_confirm" type="workflow"
+                                string="Confirmed"
+                                class="oe_highlight"
+                                states="draft"
+                                groups="estate.group_assistant" />
+
+                        <button name="signal_done" type="workflow"
+                                string="Approved"
+                                class="oe_highlight"
+                                states="confirmed"
+                                groups="estate.group_manager"/>
+
+                         <field name="state" widget="statusbar"
+                               statusbar_visible="draft,confirmed,done"
+                               statusbar_color='{"draft":"blue"}'/>
+                    </header>
+                    <sheet>
+
+                         <div class="oe_title" colors="blue">
+                             <h1>
+                                 <label string="Return Seed For Bpb "
+                                       attrs="{'invisible': [('state','not in',('draft','sent','bid'))]}"/>
+                                 <label string="Return Seed  "
+                                       attrs="{'invisible': [('state','in',('draft','sent','bid'))]}"/>
+                                 <label string="For "
+                                       attrs="{'invisible': [('state','in',('draft','sent','bid'))]}"/>
+                                 <field name="bpb_id" class="oe_inline" readonly="1" />
+                             </h1>
+                         </div>
+
+                        <group>
+                            <group>
+                                <field name="seeddo_id" id="seeddo_id" String="SPB No" readonly="1" invisible="0">{‘readonly_by_pass’: True}</field>
+                                <field name="bpb_id" string="BPB No" attrs="{'readonly': [('state','=','done')]}"
+                                       required="1" options="{'no_create_edit': True}"/>
+                                <field name="return_date"  attrs="{'readonly': [('state','=','done')]}"
+                                       string="Return Date" required="1"/>
+                            </group>
+
+                            <group>
+                                <field name="total_qty_return" string="&#931; Quantity Return ." sum="Qty" readonly="1"/>
+                            </group>
+
+                        </group>
+
+                        <group>
+                            <notebook>
+                                <page string="Return Line Information">
+                                        <tree>
+                                            <field name="returnseedline_ids" track_visibility="onchange"
+                                                   attrs="{'required': [('state','=','draft')],
+                                                'readonly': [('state','=','done')]}"
+                                                   context="{'tree_view_ref' : 'estate_nursery.view_tree_returnseedline'}"/>
+                                        </tree>
+                                </page>
+                                </notebook>
+                        </group>
+                        <div class="oe_chatter">
+                            <field name="message_follower_ids" widget="mail_followers"/>
+                            <field name="message_ids" widget="mail_thread" options='{"thread_level": 1}'/>
+                        </div>
+                    </sheet>
+                </form>
+            </field>
+        </record>
+
+        <!--View , Request line Planting-->
+
+        <record model="ir.ui.view" id="view_tree_returnseedline">
+            <field name="name">Returnseedline Planting</field>
+            <field name="model">estate.nursery.returnseedline</field>
+            <field name="arch" type="xml">
+                <tree string="Return line View" colors="red:qty_return" editable="bottom">
+                    <field name="block_location_id" string="Blok" options="{'no_create_edit': True}" />
+                    <field name="qty_request" string="&#931; Quantity Request ." sum="Qty"/>
+                    <field name="qty_return" string="&#931; Quantity Return ." sum="Qty"/>
+                    <field name="batch_id" string="Batch no" options="{'no_create_edit': True}"/>
+                    <field name="location_id" string="Plot" options="{'no_create_edit': True}"/>
+                    <field name="qty_transfer" string="&#931; Quantity transfer ." sum="Qty"/>
+                    <field name="comment"/>
                 </tree>
             </field>
         </record>
@@ -333,6 +467,12 @@
             <field name="view_mode">tree,form</field>
         </record>
 
+        <record model="ir.actions.act_window" id="action_list_returnplanting" >
+            <field name="name">Return seed</field>
+            <field name="res_model">estate.nursery.returnseed</field>
+            <field name="view_mode">tree,form</field>
+        </record>
+
         <record model="ir.actions.act_window" id="action_list_seeddo" >
             <field name="name">Planting Seed</field>
             <field name="res_model">estate.nursery.seeddo</field>
@@ -380,7 +520,9 @@
                   groups="estate.group_user"/>
         <menuitem id="request_seed_planting" name="Request Seed Planting" parent="estate_nursery_planting"
                   action="action_list_requestplanting" sequence="19" groups="estate.group_user"/>
+        <menuitem id="return_seed_planting" name="Return Seed Planting" parent="estate_nursery_planting"
+                  action="action_list_returnplanting" sequence="20" groups="estate.group_user"/>
         <menuitem id="planting_seed" name="Seed Delivery Order" parent="estate_nursery_planting"
-                  action="action_list_seeddo" sequence="20" groups="estate.group_user"/>
+                  action="action_list_seeddo" sequence="21" groups="estate.group_user"/>
     </data>
 </openerp>
